[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/WallNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/bluebird-midflap.png" type="Texture" id=2]
[ext_resource path="res://Scprits/Player.gd" type="Script" id=3]
[ext_resource path="res://Sprites/background-day.png" type="Texture" id=4]
[ext_resource path="res://Audio/point.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/die.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/wing.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprites/base.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.881, 11.8255 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.381, 12.325 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.7095, 152.908 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120, 21.5 )

[node name="World" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enable = true

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
margin_left = -120.0
margin_top = -184.0
margin_right = 120.0
margin_bottom = 184.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -248.0
margin_top = -112.0
margin_right = -232.0
margin_bottom = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
collision_mask = 9
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="pointSound" type="AudioStreamPlayer" parent="PlayerNode/Player"]
stream = ExtResource( 5 )

[node name="dieSound" type="AudioStreamPlayer" parent="PlayerNode/Player"]
stream = ExtResource( 6 )
pitch_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
texture = ExtResource( 2 )

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
shape = SubResource( 2 )

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]
position = Vector2( -71.7345, 7.55099 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2( -240, 0 )
shape = SubResource( 3 )

[node name="wingSound" type="AudioStreamPlayer" parent="PlayerNode/Player"]
stream = ExtResource( 7 )

[node name="WallNode" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, -8 )
z_index = -1

[node name="WallNode2" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 32 )
z_index = -1

[node name="WallNode3" parent="." instance=ExtResource( 1 )]
position = Vector2( 816, -8 )
z_index = -1

[node name="WallNode4" parent="." instance=ExtResource( 1 )]
position = Vector2( 1064, -48 )
z_index = -1

[node name="WallNode5" parent="." instance=ExtResource( 1 )]
position = Vector2( 1312, 40 )
z_index = -1

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="BaseArea" type="Area2D" parent="."]
position = Vector2( 0, 130 )
__meta__ = {
"_edit_group_": true
}

[node name="Base" type="Sprite" parent="BaseArea"]
position = Vector2( 1, 34 )
scale = Vector2( 0.708333, 0.392857 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseArea"]
position = Vector2( 0, 34.5 )
shape = SubResource( 4 )

[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
[connection signal="area_entered" from="BaseArea" to="PlayerNode/Player" method="_on_BaseArea_area_entered"]
